--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -230,32 +230,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a = 1\n",
-        "b = 2\n",
-        "c = 3\n",
-        "my_list = [a, b, c]\n",
-        "print(sum(my_list))\n",
-        "print(sum(my_list) / len(my_list))"
-      ],
+      "source": [],
       "metadata": {
-        "id": "Jc7TWeTm3kX6",
-        "outputId": "ed1b6148-5a64-4a06-9dd2-ed5619acc7ad",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Jc7TWeTm3kX6"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6\n",
-            "2.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -323,6 +303,48 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "a = 15\n",
+        "b = 30\n",
+        "c = 5\n",
+        "my_list = [a, b, c]\n",
+        "my_name = \"Skates\"\n",
+        "\n",
+        "print(type(a), type(my_list), type(my_name))\n",
+        "print(dir.upper(my_name)[:15])\n"
+      ],
+      "metadata": {
+        "id": "TWPKyvCDvsA_",
+        "outputId": "3f7a0cd0-fbab-4385-a7d7-1d4b19d465ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'> <class 'list'> <class 'str'>\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'builtin_function_or_method' object has no attribute 'upper'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3250462508.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'upper'"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 5. Errors and Resilience\n",
@@ -379,12 +401,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Example: NameError\n",
+        "my_variable = \"I fixed it!\"\n",
+        "print(my_variable)\n",
+        "\n",
+        "my_vari = \"Step 3\"11 # invalid syntax"
+      ],
       "metadata": {
-        "id": "XXLgNKki6Gkg"
+        "id": "XXLgNKki6Gkg",
+        "outputId": "83c35876-362e-4552-c371-d98f7152c66f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-326635587.py, line 5)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-326635587.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    my_vari = \"Step 3\"11\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
